apps/vps/hugo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugo
  namespace: hugo
  labels:
    app: hugo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugo
  template:
    metadata:
      labels:
        app: hugo
    spec:
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: hugo
          image: ghcr.io/kuseler/hugo-blog:ee03cc14e95fdf022256483f23e1747496608289
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
