apps/vps/hugo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hugo
  namespace: hugo
  labels:
    app: hugo
spec:
  type: ClusterIP
  selector:
    app: hugo
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
